...
      }}
      onRemove={
        isRequired(role, request) ? undefined : () => model.remove(target)
      }
      value={strip.value}
      loading={model.styling}
      testID="change-strip"
    />
  );
}

