...
            autoFocus
            multiline
            submitBehavior="blurAndSubmit"
            returnKeyType="done"
            onSubmitEditing={commit}
            onBlur={commit}
            testID="look-name"
          />
        ) : (
          <Text role="title" accessibilityRole="header">
            {entry.name}
          </Text>
        )}
...
