appId: com.zaimimran.almari
---
- launchApp:
    clearState: true
- repeat:
    times: 10
    while:
      notVisible: "You are set"
    commands:
      - scrollUntilVisible:
          element: "Skip"
          direction: DOWN
          timeout: 60000
      - tapOn: "Skip"
- scrollUntilVisible:
    element: "Start with the sample closet"
    direction: DOWN
    timeout: 60000
- tapOn: "Start with the sample closet"
- scrollUntilVisible:
    element: "Try a sample style"
    centerElement: true
    timeout: 60000
